Fix of a bug with conveyer to 'args' command Fix of a bug with '$' symbol in external programs. Fixes in descriptions Common version numeration was added.

--- a/header.tex
+++ b/header.tex
@@ -1,3 +1,4 @@
+\def\ver{0.32}
 %\font\tfont="CMU Serif" at 12pt \tfont
 \font\tenrm="CMU Serif" at 10pt \tenrm
 \font\ninerm="CMU Serif" at 9pt \ninerm
@@ -66,7 +67,7 @@
 	\vfill}
 \def\botofcontents{\vfill
 \noindent
-Copyright \copyright\ 2015, 2016 Alexander Sychev. All rights reserved.
+Copyright \copyright\ 2015, 2016, 2018 Alexander Sychev. All rights reserved.
 \bigskip\noindent
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
